...
                    enabled = !state.eliminando,
                    modifier = Modifier.testTag("boton_cancelar_eliminar")
                ) {
                    Text(stringResource(R.string.cancelar))
                }
            },
            modifier = Modifier.testTag("dialogo_confirmar_eliminar")
        )
    }

    Scaffold(
        topBar = {
            TopAppBar(
...
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = onNavegarARegistrar,
                containerColor = MaterialTheme.colorScheme.primary,
                modifier = Modifier.testTag("boton_registrar_gasto")
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = stringResource(R.string.registrar_gasto)
                )
            }
...
