...
    ),
    BottomNavItem(
        ruta = Rutas.LISTA_GASTOS,
        labelRes = R.string.gastos,
        labelCortoRes = R.string.nav_gastos,
        icon = Icons.Filled.ShoppingCart,
        testTag = "navegacion_gastos"
    ),
    BottomNavItem(
        ruta = Rutas.ESTADISTICAS,
        labelRes = R.string.stats_titulo,
        labelCortoRes = R.string.nav_datos,
        icon = Icons.Default.DateRange,
...
